feat: compensation and reporting structure APIs
- add reporting structure endpoint calculated using mongo's `$graphLookoup`
  - Added extra employee to static data to more easily test all cases
  - swap out embedded mongo to deal with `$graphLookup` inconsistencies.
- add compensation add / get endpoints
- add explicit generated field for mongo's _id to allow save/updates to function correctly
 Please enter the commit message for your changes. Lines starting

--- a/build.gradle
+++ b/build.gradle
@@ -27,5 +27,6 @@ dependencies {
 	implementation ('org.springframework.boot:spring-boot-starter-web')
 	implementation ('org.springframework.boot:spring-boot-starter-data-mongodb')
 	testImplementation ('org.springframework.boot:spring-boot-starter-test')
-	implementation (group: 'de.bwaldvogel', name: 'mongo-java-server', version: '1.25.0')
+	// mongo-java-server (even latest) does not appear to support $graphLookup, so use embedded mongo instead
+	implementation('de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.9.2')
 }
